updated pipe for wdpa terrestrial

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -50,6 +50,7 @@
     "    set_location_iso,\n",
     "    set_fps_classes,\n",
     "    filter_by_methodology,\n",
+    "    filter_by_terrestrial,\n",
     "    transform_points,\n",
     "    clean_geometries,\n",
     ")"
@@ -839,6 +840,206 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Mpas protected planet intermediate terrestrial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "force_clean = True\n",
+    "step = \"preprocess\"\n",
+    "pipe = \"mpa-terrestrial\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mpa_url = \"https://www.protectedplanet.net/downloads\"\n",
+    "mpa_body = {\n",
+    "    \"domain\": \"general\",\n",
+    "    \"format\": \"shp\",\n",
+    "    \"token\": \"wdpa\",\n",
+    "    \"id\": 76011,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "working_folder = FileConventionHandler(pipe)\n",
+    "input_path = working_folder.pipe_raw_path\n",
+    "temp_working_path = working_folder.get_temp_file_path(step)\n",
+    "\n",
+    "output_path = working_folder.get_processed_step_path(step)\n",
+    "output_file = working_folder.get_step_fmt_file_path(step, \"gpkg\")\n",
+    "zipped_output_file = working_folder.get_step_fmt_file_path(step, \"zip\", True)\n",
+    "remote_path = working_folder.get_remote_path(step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'id': 'wdpa-shp', 'title': 'WDPA_Sep2024_Public_shp', 'url': 'https://d1gam3xoknrgr2.cloudfront.net/current/WDPA_Sep2024_Public_shp.zip', 'hasFailed': False, 'token': 'wdpa'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# download data\n",
+    "r = requests.post(url=mpa_url, data=mpa_body)\n",
+    "r.raise_for_status()\n",
+    "\n",
+    "download_url = r.json().get(\"url\")\n",
+    "input_file_name = f'{r.json().get(\"title\")}.zip'\n",
+    "print(r.json())\n",
+    "\n",
+    "input_file = downloadFile(\n",
+    "    url=download_url,\n",
+    "    output_path=input_path,\n",
+    "    overwrite=force_clean,\n",
+    "    file=input_file_name,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unzip file twice due how data is provisioned by protected planet\n",
+    "shutil.unpack_archive(\n",
+    "    input_file,\n",
+    "    temp_working_path,\n",
+    "    \"zip\",\n",
+    ")\n",
+    "\n",
+    "for file in temp_working_path.glob(\"*.zip\"):\n",
+    "    shutil.unpack_archive(file, temp_working_path.joinpath(file.stem), \"zip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data & Transform it\n",
+    "unziped_folders = []\n",
+    "for file in temp_working_path.glob(\"*/*.shp\"):\n",
+    "    df = (\n",
+    "        gpd.read_file(file)\n",
+    "        .pipe(filter_by_methodology)\n",
+    "        .pipe(filter_by_terrestrial)\n",
+    "        .pipe(transform_points)\n",
+    "        .pipe(clean_geometries)\n",
+    "    )\n",
+    "    unziped_folders.append(df)\n",
+    "\n",
+    "# merge datasets\n",
+    "gdf = gpd.GeoDataFrame(\n",
+    "    pd.concat(unziped_folders, ignore_index=True),\n",
+    "    crs=unziped_folders[0].crs,\n",
+    ")\n",
+    "\n",
+    "gdf.drop(\n",
+    "    columns=list(\n",
+    "        set(gdf.columns)\n",
+    "        - set(\n",
+    "            [\n",
+    "                \"geometry\",\n",
+    "                \"WDPAID\",\n",
+    "                \"WDPA_PID\",\n",
+    "                \"PA_DEF\",\n",
+    "                \"NAME\",\n",
+    "                \"PARENT_ISO\",\n",
+    "                \"DESIG_ENG\",\n",
+    "                \"IUCN_CAT\",\n",
+    "                \"STATUS\",\n",
+    "                \"STATUS_YR\",\n",
+    "                \"GIS_AREA\",\n",
+    "                \"MARINE\",\n",
+    "            ]\n",
+    "        )\n",
+    "    ),\n",
+    "    inplace=True,\n",
+    ")\n",
+    "gdf[\"WDPAID\"] = pd.to_numeric(gdf[\"WDPAID\"], downcast=\"integer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save data & zip it\n",
+    "gdf.to_file(\n",
+    "    filename=output_file,\n",
+    "    driver=\"GPKG\",\n",
+    "    layer=\"name\",\n",
+    "    encoding=\"utf-8\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "# LOAD\n",
+    "## load zipped file to GCS\n",
+    "writeReadGCP(\n",
+    "    credentials=mysettings.GCS_KEYFILE_JSON,\n",
+    "    bucket_name=mysettings.GCS_BUCKET,\n",
+    "    blob_name=remote_path,\n",
+    "    file=output_file,\n",
+    "    operation=\"w\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean unzipped files\n",
+    "rm_tree(temp_working_path) if temp_working_path.exists() else None\n",
+    "rm_tree(output_path) if output_path.exists() else None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Habitats"
    ]
   },
@@ -1169,6 +1370,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
