--- a/data/notebooks/pipes_mock/tiles.ipynb
+++ b/data/notebooks/pipes_mock/tiles.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -130,9 +139,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'eez_dir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[21], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m collection_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregions\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# load the EEZ file & the regions file\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m eez_data \u001b[38;5;241m=\u001b[39m gpd\u001b[38;5;241m.\u001b[39mread_file(\u001b[43meez_dir\u001b[49m\u001b[38;5;241m.\u001b[39mget_step_fmt_file_path(prev_step, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\u001b[38;5;241m.\u001b[39mas_posix())\n\u001b[1;32m      5\u001b[0m regions_df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[1;32m      6\u001b[0m     [\n\u001b[1;32m      7\u001b[0m         {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregion_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mregion_iso\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlocation_id\u001b[39m\u001b[38;5;124m\"\u001b[39m: iso}\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     10\u001b[0m     ]\n\u001b[1;32m     11\u001b[0m )\n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# merge the two files\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'eez_dir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "collection_name = \"regions\"\n",
     "\n",
@@ -216,6 +237,116 @@
    "source": [
     "uploadToMapbox(\n",
     "    eez_dir.get_processed_step_path(current_step).joinpath(f\"{collection_name}.mbtiles\"),\n",
+    "    collection_name,\n",
+    "    mysettings.MAPBOX_USER,\n",
+    "    mysettings.MAPBOX_TOKEN,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Countries - gadm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mambauser/data/gadm/processed/gadm_preprocess.zip\n",
+      "/home/mambauser/data/gadm/processed/preprocess\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Allocating 64 GB of heap memory\n",
+      "[o] Wrote /home/mambauser/data/gadm/processed/tiles/gadm_tiles.json\n",
+      "For layer 0, using name \"gadm_tiles\"\n",
+      "/home/mambauser/data/gadm/processed/tiles/gadm_tiles.json:12: Found ] at top level\n",
+      "/home/mambauser/data/gadm/processed/tiles/gadm_tiles.json:10: Reached EOF without all containers being closed\n",
+      "In JSON object {\"type\":\"FeatureCollection\",\"features\":[]}\n",
+      "206 features, 181286774 bytes of geometry, 3347 bytes of separate metadata, 9901 bytes of string pool\n",
+      "Choosing a maxzoom of -z0 for features about 2772178 feet (844960 meters) apart\n",
+      "Choosing a maxzoom of -z10 for resolution of about 317 feet (96 meters) within features\n",
+      "  99.9%  10/128/306   \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/mambauser/data/gadm/processed/tiles/gadm_simplified.mbtiles')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pipe = \"gadm\"\n",
+    "collection_name = f\"{pipe}_simplified\"\n",
+    "\n",
+    "gadm_dir = FileConventionHandler(pipe)\n",
+    "\n",
+    "# Download the EEZ file && unzip it\n",
+    "download_and_unzip_if_needed(gadm_dir, prev_step, mysettings)\n",
+    "\n",
+    "# simplify the geometries\n",
+    "Mapshaper(64).input([gadm_dir.get_step_fmt_file_path(prev_step, \"shp\").as_posix()]).filter_fields(\n",
+    "    fields=\",\".join([\"GID_0\", \"COUNTRY\", \"COUNTRY_ES\", \"COUNTRY_FR\", 'area_km2'])\n",
+    ").output(\n",
+    "    gadm_dir.get_step_fmt_file_path(current_step, \"json\").as_posix(), force=True, format=\"geojson\"\n",
+    ").execute()\n",
+    "\n",
+    "# Generate the mbtiles\n",
+    "mbtileGeneration(\n",
+    "    gadm_dir.get_step_fmt_file_path(current_step, \"json\"),\n",
+    "    gadm_dir.get_processed_step_path(current_step).joinpath(f\"{collection_name}.mbtiles\"),\n",
+    "    True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload: ../../data/gadm/processed/tiles/gadm_simplified.mbtiles to s3://tilestream-tilesets-production/69/_pending/6o7ulrkerlm1xi20i3scyy0mc/skytruth\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Linking tileset to Mapbox: 100%|██████████| 100/100 [03:43<00:00,  2.23s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "uploadToMapbox(\n",
+    "    gadm_dir.get_processed_step_path(current_step).joinpath(f\"{collection_name}.mbtiles\"),\n",
     "    collection_name,\n",
     "    mysettings.MAPBOX_USER,\n",
     "    mysettings.MAPBOX_TOKEN,\n",
@@ -336,23 +467,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def split_n_parts(gdf: gpd.GeoDataFrame, folder: Path, n:int) -> None:\n",
     "    \n",
     "    for i in range(n):\n",
     "        path = folder.joinpath(f\"part{i}.shp\")\n",
-    "        gdf.iloc[i * len(gdf) // n : (i + 1) * len(gdf) // n].to_file(path, driver=\"ESRI Shapefile\")\n",
-    "\n",
-    "\n"
+    "        gdf.iloc[i * len(gdf) // n : (i + 1) * len(gdf) // n].to_file(path, driver=\"ESRI Shapefile\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -409,428 +537,23 @@
     }
    ],
    "source": [
-    "# Download the EEZ file && unzip it\n",
+    "# Download the file && unzip it\n",
     "download_and_unzip_if_needed(source_dir, prev_step, mysettings, \"gpkg\")\n",
+    "\n",
     "# split the file in two parts\n",
     "file = gpd.read_file(source_dir.get_step_fmt_file_path(prev_step, \"gpkg\").as_posix())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 7482/292261 [00:13<00:40, 7027.40it/s]  "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|▍         | 12182/292261 [00:14<00:57, 4912.45it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  9%|▉         | 25865/292261 [00:17<03:58, 1115.08it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  9%|▉         | 27219/292261 [00:18<10:50, 407.49it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|█▊        | 53181/292261 [00:26<04:40, 852.40it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 27%|██▋       | 77894/292261 [00:33<01:35, 2247.11it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 28%|██▊       | 80952/292261 [00:34<01:00, 3471.37it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 28%|██▊       | 81812/292261 [00:35<04:25, 793.04it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 28%|██▊       | 82393/292261 [00:35<04:41, 744.80it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 29%|██▉       | 84436/292261 [00:36<03:49, 904.50it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 33%|███▎      | 96159/292261 [00:56<06:27, 506.25it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 34%|███▍      | 98927/292261 [00:57<01:41, 1907.31it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 34%|███▍      | 100063/292261 [01:01<16:25, 194.94it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 102491/292261 [01:06<09:26, 335.12it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 35%|███▌      | 102932/292261 [01:08<07:54, 398.64it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 37%|███▋      | 107337/292261 [01:15<07:45, 397.14it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 54%|█████▍    | 158758/292261 [01:42<03:06, 716.16it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 164344/292261 [01:44<01:39, 1289.68it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 66%|██████▋   | 193651/292261 [01:53<01:19, 1237.86it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 68%|██████▊   | 199046/292261 [01:54<01:19, 1171.99it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 70%|██████▉   | 203524/292261 [01:56<03:13, 457.51it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 74%|███████▍  | 217703/292261 [02:01<01:14, 1003.62it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 80%|███████▉  | 232945/292261 [02:10<02:24, 410.84it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 81%|████████  | 235500/292261 [02:14<04:28, 211.70it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 84%|████████▍ | 246516/292261 [02:19<00:28, 1606.01it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 87%|████████▋ | 255262/292261 [02:22<00:26, 1403.03it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 88%|████████▊ | 257138/292261 [02:22<00:16, 2145.00it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'Polygon' object has no attribute 'geoms'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 89%|████████▉ | 261390/292261 [02:25<01:42, 301.68it/s] "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 91%|█████████▏| 267318/292261 [02:28<00:18, 1335.53it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'shapely.geometry.base.GeometrySequence'>\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 292261/292261 [03:01<00:00, 1611.07it/s]\n"
+      "100%|██████████| 292261/292261 [03:19<00:00, 1461.41it/s]\n"
      ]
     }
    ],
@@ -840,11 +563,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test.to_file(source_dir.get_step_fmt_file_path(current_step, \"shp\").as_posix(), driver=\"ESRI Shapefile\")"
+    "test.to_file(source_dir.get_step_fmt_file_path(prev_step, \"shp\").as_posix(), driver=\"ESRI Shapefile\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/mambauser/data/mpa-terrestrial/processed/preprocess/mpa-terrestrial_preprocess.shp'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source_dir.get_step_fmt_file_path(prev_step, \"shp\").as_posix()"
    ]
   },
   {
@@ -1881,6 +1624,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
