add coverage stats for terrestrial

--- a/data/notebooks/pipes_mock/precalc.ipynb
+++ b/data/notebooks/pipes_mock/precalc.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,20 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<helpers.strapi.Strapi at 0x7f2ecc13ba10>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Strapi setup\n",
     "strapi = Strapi(url=mysettings.STRAPI_URL)\n",
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,16 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:google.auth.transport.requests:Making request: POST https://oauth2.googleapis.com/token\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -156,7 +138,7 @@
        "PosixPath('/home/mambauser/data/eez/processed/preprocess')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +202,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##\n",
+    "(locations[['id', 'code']]\n",
+    " .to_csv(pipe_dir.get_processed_step_path(current_step)\n",
+    "     .joinpath('locations_code.csv'), index=False))\n",
+    "\n",
+    "del locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strapi.deleteCollectionData(strapi_collection, list(range(1, 300)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strapi.importCollectionData(\n",
+    "    strapi_collection,\n",
+    "    output_file,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Locations \n",
+    "### eez + regions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mambauser/data/eez/processed/eez_preprocess.zip\n",
+      "/home/mambauser/data/eez/processed/preprocess\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/home/mambauser/data/eez/processed/preprocess')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pipe = \"eez\"\n",
+    "strapi_collection = \"\"\n",
+    "pipe_dir = FileConventionHandler(pipe)\n",
+    "\n",
+    "output_file = pipe_dir.get_processed_step_path(current_step).joinpath(\"locations.json\")\n",
+    "\n",
+    "# Download the EEZ file && unzip it\n",
+    "download_and_unzip_if_needed(pipe_dir, prev_step, mysettings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "locations = (\n",
+    "    gpd.read_file(pipe_dir.get_step_fmt_file_path(prev_step, \"shp\"))\n",
+    "    .pipe(add_envelope)\n",
+    "    .pipe(add_location_iso)\n",
+    "    .pipe(expand_multiple_locations)\n",
+    "    .pipe(add_region_iso,'iso')\n",
+    "    .pipe(calculate_eez_area)\n",
+    "    .pipe(add_bbox)\n",
+    "    .pipe(add_groups_and_members)\n",
+    "    .pipe(add_location_name)\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            \"iso\": \"code\",\n",
+    "            \"AREA_KM2\": \"totalMarineArea\",\n",
+    "            \"location_type\": \"type\",\n",
+    "        }\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "locations.drop(\n",
+    "    columns=list(\n",
+    "        set(locations.columns) - \n",
+    "        set([\"code\", \"name\", \"totalMarineArea\", \"type\", \"groups\", \"bounds\", \"id\"])),\n",
+    "    inplace=True,\n",
+    ")\n",
+    "\n",
+    "output_locations = {\n",
+    "    \"version\": 2,\n",
+    "    \"data\": {\n",
+    "        \"api::location.location\": LocationSchema(pd.DataFrame(locations)).to_dict(\n",
+    "            orient=\"index\"\n",
+    "        )\n",
+    "    },\n",
+    "}\n",
+    "with open(output_file, \"w\") as f:\n",
+    "    json.dump(output_locations, f)\n",
+    "\n",
+    "del output_locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,6 +1623,241 @@
     "        strapi_collection_mpas,\n",
     "        mpa_folder.joinpath(f\"mpa_detail_{i}.csv\"),\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Coverage stats - Tpas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are going to use the intermediate data from eez, in order to create a dataset that can be used as a land mask.\n",
+    "The steps are:\n",
+    "1. Load eez\n",
+    "2. Spatial inner Join the eez dataset with the Mpas one\n",
+    "3. Assign the location iso\n",
+    "4. dissolve by location iso and cummulative year\n",
+    "5. calculate the area for global regions and eez countries\n",
+    "6. prepare the data to be ingested in strapi\n",
+    "7. upload the data to strapi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/mambauser/data/gadm/processed/gadm_preprocess.zip\n",
+      "/home/mambauser/data/gadm/processed/preprocess\n",
+      "/home/mambauser/data/mpa-terrestrial/processed/mpa-terrestrial_preprocess.zip\n",
+      "/home/mambauser/data/mpa-terrestrial/processed/preprocess\n"
+     ]
+    }
+   ],
+   "source": [
+    "pipe = \"mpa-terrestrial\"\n",
+    "strapi_collection = \"\"\n",
+    "\n",
+    "pipe_dir_gadm = FileConventionHandler(\"gadm\")\n",
+    "pipe_dir_pas = FileConventionHandler(pipe)\n",
+    "output_file = pipe_dir_pas.get_processed_step_path(current_step).joinpath(\n",
+    "    \"pa_landmask_strapi.csv\"\n",
+    ")\n",
+    "\n",
+    "# Download the EEZ file && unzip it\n",
+    "download_and_unzip_if_needed(pipe_dir_gadm, prev_step, mysettings)\n",
+    "# Download the mpas file && unzip it\n",
+    "download_and_unzip_if_needed(pipe_dir_pas, prev_step, mysettings)\n",
+    "\n",
+    "# Load the data\n",
+    "gadm = gpd.read_file(pipe_dir_gadm.get_step_fmt_file_path(prev_step, \"shp\")).pipe(clean_geometries)\n",
+    "pas = gpd.read_file(pipe_dir_pas.get_step_fmt_file_path(prev_step, \"shp\")).pipe(clean_geometries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|██▋       | 69/254 [00:04<00:14, 12.62it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 77%|███████▋  | 195/254 [01:11<01:13,  1.24s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 253/254 [3:08:04<32:24, 1944.09s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "gadm_pas_data_join = await spatial_join(gadm, pas.pipe(filter_by_exluding_propossed_mpas))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:pyogrio._io:Created 17,697 records\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To get an idea of the spatial join results\n",
+    "eez_mpas_data_join.pipe(add_location_iso).pipe(assign_iso3).to_file(\n",
+    "    pipe_dir_mpas.get_processed_step_path(current_step).joinpath(\"mpas_sjoin.shp\"), driver=\"ESRI Shapefile\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 14/14 [03:59<00:00, 17.14s/it]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████▉| 281/282 [00:19<00:02,  2.21s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "final_data = await process_mpa_data(\n",
+    "    eez_mpas_data_join.pipe(add_location_iso).pipe(assign_iso3),\n",
+    "    range(2011, time.localtime().tm_year + 1),\n",
+    "    [\"PA_DEF\", \"iso_3\"],\n",
+    "    {\"protectedAreasCount\": \"sum\"},\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coverage = (\n",
+    "    final_data.pipe(calculate_global_area, [\"year\", \"PA_DEF\"], {\"area\": \"sum\"}, \"iso_3\")\n",
+    "    .pipe(separate_parent_iso, \"iso_3\")\n",
+    "    .pipe(add_region_iso, \"iso_3\")\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"iso_3\": {\n",
+    "                \"ATA\": \"ABNJ\",\n",
+    "                \"COK\": \"NZL\",\n",
+    "                \"IOT\": \"GBR\",\n",
+    "                \"NIU\": \"NZL\",\n",
+    "                \"SHN\": \"GBR\",\n",
+    "                \"SJM\": \"NOR\",\n",
+    "                \"UMI\": \"USA\",\n",
+    "                \"NCL\": \"FRA\",\n",
+    "                \"GIB\": \"GBR\",\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "    .pipe(calculate_stats_cov, [\"year\", \"PA_DEF\"], \"iso_3\")\n",
+    "    .pipe(coverage_stats)\n",
+    ")\n",
+    "\n",
+    "ProtectedAreaExtentSchema(\n",
+    "    coverage.pipe(\n",
+    "        output,\n",
+    "        \"iso_3\",\n",
+    "        {\"PA_DEF\": {\"0\": 2, \"1\": 1}},\n",
+    "        {\"PARENT_NAME\": \"location\", \"PA_DEF\": \"protection_status\"},\n",
+    "        [\"area\", \"iso_3\"],\n",
+    "    )\n",
+    ").to_csv(\n",
+    "    output_file,\n",
+    "    index=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strapi_collection = \"protection-coverage-stat\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<helpers.strapi.Strapi at 0x7fda8ddb8860>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "strapi.deleteCollectionData(strapi_collection, list(range(1, 2300)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "strapi.importCollectionData(\n",
+    "    strapi_collection,\n",
+    "    output_file,\n",
+    ")"
    ]
   }
  ],
