added processing improvements to terrestrial country summary coverage stats

--- a/data/notebooks/pipes_mock/intermediate.ipynb
+++ b/data/notebooks/pipes_mock/intermediate.ipynb
@@ -63,6 +63,7 @@
     "    filter_by_terrestrial,\n",
     "    transform_points,\n",
     "    clean_geometries,\n",
+    "    simplify_async,\n",
     ")"
    ]
   },
@@ -1033,12 +1034,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_gadm = await simplify_async(gdf_updated)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the file\n",
-    "gdf_updated.to_file(output_file.as_posix(), driver=\"ESRI Shapefile\")"
+    "final_gadm.to_file(output_file.as_posix(), driver=\"ESRI Shapefile\")"
    ]
   },
   {
@@ -1743,12 +1753,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_wdpa_terrestrial = await simplify_async(gdf)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save data & zip it\n",
-    "gdf.to_file(\n",
+    "final_wdpa_terrestrial.to_file(\n",
     "    filename=output_file,\n",
     "    driver=\"GPKG\",\n",
     "    layer=\"name\",\n",
