--- a/data/notebooks/pipes_mock/tiles.ipynb
+++ b/data/notebooks/pipes_mock/tiles.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -245,7 +236,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Countries - gadm"
    ]
@@ -460,14 +453,16 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### PAs: Terrestrial Protected Areas from WDPA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,39 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import asyncio\n",
-    "from pipelines.utils import background\n",
-    "from pipelines.processors import repair_geometry\n",
-    "\n",
-    "from tqdm.asyncio import tqdm\n",
-    "\n",
-    "\n",
-    "@background\n",
-    "def simplify(geometry, pbar, tlrc=0.0001) -> gpd.GeoDataFrame:\n",
-    "    try:\n",
-    "        return repair_geometry(geometry.simplify(tlrc))\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        return geometry\n",
-    "    finally:\n",
-    "        pbar.update(1)\n",
-    "\n",
-    "\n",
-    "async def simplify_async(gdf: gpd.GeoDataFrame) -> gpd.GeoDataFrame:\n",
-    "    with tqdm(total=gdf.shape[0]) as pbar:\n",
-    "        gdf[\"geometry\"] = await asyncio.gather(\n",
-    "            *(simplify(val, pbar) for val in gdf[\"geometry\"])\n",
-    "        )\n",
-    "    return gdf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -546,14 +509,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 292261/292261 [03:19<00:00, 1461.41it/s]\n"
+      "  2%|▏         | 6511/292261 [00:12<00:35, 8148.33it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  4%|▍         | 12019/292261 [00:13<01:04, 4363.45it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  9%|▉         | 26702/292261 [00:17<01:37, 2722.22it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  9%|▉         | 27206/292261 [00:17<04:30, 980.59it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 18%|█▊        | 53263/292261 [00:25<06:31, 609.87it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Polygon' object has no attribute 'geoms'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 27%|██▋       | 77713/292261 [00:32<00:56, 3799.17it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 28%|██▊       | 81780/292261 [00:34<03:11, 1097.17it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n",
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 28%|██▊       | 82483/292261 [00:34<01:27, 2385.63it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 29%|██▉       | 84671/292261 [00:35<02:11, 1580.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 33%|███▎      | 96205/292261 [00:53<07:36, 429.82it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 99156/292261 [00:55<04:11, 766.30it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|███▍      | 100110/292261 [00:58<05:36, 571.85it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▌      | 102473/292261 [01:02<12:39, 249.94it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Polygon' object has no attribute 'geoms'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 35%|███▌      | 102982/292261 [01:04<06:56, 454.71it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 37%|███▋      | 107131/292261 [01:11<04:11, 736.67it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 54%|█████▍    | 158622/292261 [01:38<02:26, 911.79it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 56%|█████▌    | 164270/292261 [01:40<01:53, 1125.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 66%|██████▋   | 193634/292261 [01:48<02:32, 647.47it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 68%|██████▊   | 198829/292261 [01:50<02:00, 777.87it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70%|██████▉   | 203548/292261 [01:51<02:10, 682.27it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 75%|███████▍  | 217768/292261 [01:56<00:57, 1295.56it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 80%|███████▉  | 232966/292261 [02:05<02:51, 346.33it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Polygon' object has no attribute 'geoms'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 81%|████████  | 236337/292261 [02:09<00:42, 1311.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 84%|████████▍ | 246533/292261 [02:13<00:31, 1436.44it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 87%|████████▋ | 255326/292261 [02:16<00:39, 943.14it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Polygon' object has no attribute 'geoms'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 88%|████████▊ | 257145/292261 [02:16<00:19, 1804.46it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Polygon' object has no attribute 'geoms'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 89%|████████▉ | 261395/292261 [02:18<01:41, 304.37it/s] "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 91%|█████████▏| 267248/292261 [02:22<00:20, 1225.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'shapely.geometry.base.GeometrySequence'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 292261/292261 [02:57<00:00, 1642.99it/s]\n"
      ]
     }
    ],
@@ -563,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1784,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Protected seas"
    ]
